--- a/Demos/MomsData_Demo.ipynb
+++ b/Demos/MomsData_Demo.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -86,24 +86,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "51 rprof files found in '/data/ASDR/H-core-M25/M29-768/rprofs/.\n",
-      "Dump numbers range from 650 to 700.\n",
+      "748 rprof files found in '/data/ASDR/H-core-M25/M29-768/rprofs/.\n",
+      "Dump numbers range from 0 to 747.\n",
       "Reading history file '/data/ASDR/H-core-M25/M29-768/rprofs/HcoreE00768-0000.hstry'.\n",
-      "51 .aaa files found in '/data/ASDR/H-core-M25/M29-768/myavsbq/.\n",
-      "Dump numbers range from 650 to 700.\n",
-      "The PPMstar grid is being constructed, this can take a moment\n",
-      "51 rprof files found in '/data/ASDR/H-core-M25/M35-1536/rprofs/.\n",
-      "Dump numbers range from 375 to 425.\n",
-      "Reading history file '/data/ASDR/H-core-M25/M35-1536/rprofs/HcoreE01536-0000.hstry'.\n",
-      "51 .aaa files found in '/data/ASDR/H-core-M25/M35-1536/myavsbq/.\n",
-      "Dump numbers range from 375 to 425.\n",
+      "748 .aaa files found in '/data/ASDR/H-core-M25/M29-768/myavsbq/.\n",
+      "Dump numbers range from 0 to 747.\n",
       "The PPMstar grid is being constructed, this can take a moment\n",
       "moms and rprof dictionary created\n"
      ]
@@ -114,13 +108,15 @@
     "dir_project = 'H-core-M25'\n",
     "rprof = {}; moms = {}         # initialize dictionaries to hold rprof and moms instances\n",
     "\n",
-    "runs       = ['M29-768','M35-1536'] # select runs\n",
     "moms_dumps = {}\n",
-    "moms_dumps[runs[0]] = 650       # select dump numbers for moms\n",
-    "moms_dumps[runs[1]] = 375   \n",
     "\n",
-    "#runs       = ['M29-768'] # select runs\n",
-    "#moms_dumps = [ 650     ] # select dump numbers for moms\n",
+    "runs                = ['M29-768'] # select runs\n",
+    "moms_dumps[runs[0]] = 650  # select dump numbers for moms\n",
+    "\n",
+    "add_highres = False\n",
+    "if add_highres:\n",
+    "    runs.append('M35-1536')\n",
+    "    moms_dumps[runs[1]] = 375   \n",
     "\n",
     "# rprof instance holds radial profiles for all dumps\n",
     "# moms instance holds only one dump at a time\n",
@@ -134,12 +130,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "runid = 'M29-768'   # select run id for the rest of the notebook\n",
+    "#runid = 'M35-1536'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get info about moms instance\n",
-    "# help(moms['M29-768'])"
+    "# help(moms[runid])"
    ]
   },
   {
@@ -151,16 +157,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x,y,z,r=moms['M29-768'].get_grid()"
+    "x,y,z,r=moms[runid].get_grid()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -177,19 +183,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Distance center of grid to max x value of domain: 2493.4895 Mm\n"
+      "Distance center of grid to max x value of domain: 2486.9792 Mm\n"
      ]
     }
    ],
    "source": [
-    "print(\"Distance center of grid to max x value of domain: %6.4f Mm\" % moms['M35-1536'].get_grid()[0][-1])"
+    "print(\"Distance center of grid to max x value of domain: %6.4f Mm\" % moms[runid].get_grid()[0][-1])"
    ]
   },
   {
@@ -202,13 +208,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d6bac3bc7da04434bd7a48fd1a9d486f",
+       "model_id": "749b7cd0899c44398f81afa68a8527cd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -225,7 +231,7 @@
        "Text(0, 0.5, '')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +240,7 @@
     "ifig=0\n",
     "ifig += 1; plt.close(ifig);  plt.figure(ifig)\n",
     "hist(r,86)\n",
-    "xmax = moms['M35-1536'].get_grid()[0][-1]\n",
+    "xmax = moms[runid].get_grid()[0][-1]\n",
     "vlines(xmax,0,2.3e5,linestyles='--',lw=0.5)\n",
     "xlabel('radius / Mm')\n",
     "ylabel('')"
@@ -249,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,13 +264,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a83894b0f9dd46cc864540d2e830cf2b",
+       "model_id": "7c92e3cb18ad4591b2c922b19c54d865",
        "version_major": 2,
        "version_minor": 0
       },
@@ -278,10 +284,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f378d703e10>]"
+       "[<matplotlib.lines.Line2D at 0x7fce8093dcc0>]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,22 +307,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# grab the grid\n",
-    "x,y,z,r = moms['M35-1536'].get_grid()\n",
+    "x,y,z,r = moms[runid].get_grid()\n",
     "\n",
     "# they are flattened arrays, rearrange\n",
-    "resolution = moms['M35-1536'].momsdata.resolution\n",
+    "resolution = moms[runid].momsdata.resolution\n",
     "r_matrix = np.reshape(r,(resolution,resolution,resolution))\n",
     "\n",
     "# extent x,y\n",
     "extent=[min(x),max(x),min(y),max(y)]\n",
     "\n",
     "# slice number\n",
-    "slice_num = 200"
+    "slice_num = int(resolution/2) # central slice"
    ]
   },
   {
@@ -328,13 +334,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3327b5d609c4364ba19d539943b6e10",
+       "model_id": "e4373669b4524d43b48f5c950f00a564",
        "version_major": 2,
        "version_minor": 0
       },
@@ -349,9 +355,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7f378d69fbe0>\n",
+      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7fce808dec18>\n",
       "DEBUG:matplotlib.colorbar:Using auto colorbar locator on colorbar\n",
-      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7f378d69fbe0>\n",
+      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7fce808dec18>\n",
       "DEBUG:matplotlib.colorbar:Setting pcolormesh\n"
      ]
     },
@@ -361,7 +367,7 @@
        "Text(0, 0.5, 'radius')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +392,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "768"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resolution*4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -396,54 +422,45 @@
       "The spatial resolution of 768 momsdata is 26.042 Mm\n",
       "While PPMStar 768 has a spatial resolution of 6.510 Mm\n",
       "\n",
-      "The spatial resolution of 1536 momsdata is 13.021 Mm\n",
-      "While PPMStar 1536 has a spatial resolution of 3.255 Mm\n",
-      "\n",
       "The extent of the simulation is then 2500 Mm\n"
      ]
     }
    ],
    "source": [
-    "# spatial resolution for 768 momsdata\n",
-    "print('The spatial resolution of 768 momsdata is {:0.3f}'.format(np.diff(moms['M29-768'].get_grid()[0])[0]),'Mm')\n",
-    "print('While PPMStar 768 has a spatial resolution of {:0.3f}'.format(np.diff(moms['M29-768'].get_grid()[0])[0]/4.),'Mm')\n",
-    "\n",
-    "print('')\n",
-    "\n",
-    "# spatial resolution for 1536 momsdata\n",
-    "print('The spatial resolution of 1536 momsdata is {:0.3f}'.format(np.diff(moms['M35-1536'].get_grid()[0])[0]),'Mm')\n",
-    "print('While PPMStar 1536 has a spatial resolution of {:0.3f}'.format(np.diff(moms['M35-1536'].get_grid()[0])[0]/4.),'Mm')\n",
+    "# spatial resolution for momsdata\n",
+    "print('The spatial resolution of 768 momsdata is {:0.3f}'.format(np.diff(moms[runid].get_grid()[0])[0]),'Mm')\n",
+    "print('While PPMStar 768 has a spatial resolution of {:0.3f}'.format(np.diff(moms[runid].get_grid()[0])[0]/4.),'Mm')\n",
     "\n",
     "print('')\n",
     "\n",
     "# what is the extent of the simulation?\n",
-    "print('The extent of the simulation is then {:0.0f}'.format(np.diff(moms['M35-1536'].get_grid()[0])[0]/4. * 1536/2.),'Mm')"
+    "print('The extent of the simulation is then {:0.0f}'.format(np.diff(moms[runid].get_grid()[0])[0] * resolution/2.),'Mm')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The temporal resolution of 768 and 1536 momsdata is the same as the PPMStar output which averages around 167.19 minutes per dump\n",
+      "The temporal resolution of momsdata is the same as the PPMStar output which averages around 167.19 minutes per dump\n",
       "\n",
-      "The run-time temporal resolution of the PPMStar output averages around 2.73 seconds per cycle\n"
+      "The run-time temporal resolution of the PPMStar output averages around 5.47 seconds per cycle\n"
      ]
     }
    ],
    "source": [
     "#  for 768 momsdata\n",
-    "print('The temporal resolution of 768 and 1536 momsdata is the same as the PPMStar output which averages around {:0.2f}'.\n",
-    "      format(np.mean(np.diff(rprof['M29-768'].get_history().get('time(mins)')))),'minutes per dump')\n",
+    "print('The temporal resolution of momsdata is the same as the PPMStar output which averages around {:0.2f}'.\n",
+    "      format(np.mean(np.diff(rprof[runid].get_history().get('time(mins)')))),'minutes per dump')\n",
     "\n",
     "print('')\n",
     "\n",
     "print('The run-time temporal resolution of the PPMStar output averages around {:0.2f}'.\n",
-    "      format(np.mean(rprof['M35-1536'].get_history().get('dt(secs)'))),'seconds per cycle')"
+    "      format(np.mean(rprof[runid].get_history().get('dt(secs)'))),'seconds per cycle')"
    ]
   },
   {
@@ -462,24 +479,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6507520.0 seconds have passed since the simulation started for the 768 run\n",
-      "3756320.0 seconds have passed since the simulation started for the 1536 run\n"
+      "6507520.0 seconds have passed since the simulation started for the M29-768 run\n"
      ]
     }
    ],
    "source": [
-    "# get the simulation time in seconds for dump 100 in the 768 and 1536 runs\n",
-    "print('{:0.1f} seconds '.format(rprof['M29-768'].get_history().get('time(secs)')[moms_dumps['M29-768']]) + \n",
-    "'have passed since the simulation started for the 768 run')\n",
-    "print('{:0.1f} seconds '.format(rprof['M35-1536'].get_history().get('time(secs)')[moms_dumps['M35-1536']]) +\n",
-    "      'have passed since the simulation started for the 1536 run')"
+    "# get the simulation time in seconds for dump 100 \n",
+    "print('{:0.1f} seconds '.format(rprof[runid].get_history().get('time(secs)')[moms_dumps[runid]]) + \n",
+    "'have passed since the simulation started for the '+runid+' run')"
    ]
   },
   {
@@ -547,14 +561,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# define variables for dump number, rprof and moms\n",
-    "\n",
-    "runid = 'M29-768'   # select run id for the rest of the notebook\n",
-    "runid = 'M35-1536'\n",
     "thisdump = moms_dumps[runid]\n",
     "thisrprof = rprof[runid]\n",
     "thismoms = moms[runid]\n",
@@ -573,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -605,13 +616,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d646ff5b428c48bfae6628920becd691",
+       "model_id": "693a081359774cab86087ad3a1e9d117",
        "version_major": 2,
        "version_minor": 0
       },
@@ -625,10 +636,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f378d50b438>"
+       "<matplotlib.legend.Legend at 0x7fce80785278>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,13 +658,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7cfee2643daf493997ca7bc461d4be15",
+       "model_id": "fb28fde692a34f45915c36f4ced5778b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -667,10 +678,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f378d60af60>"
+       "<matplotlib.legend.Legend at 0x7fce807aa240>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,13 +743,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "77c46b4524a24bc584c5a0d4b04823f9",
+       "model_id": "cd77c859b2df4f988ece11be5608568f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -753,9 +764,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7f378d4c3ef0>\n",
+      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7fce80705080>\n",
       "DEBUG:matplotlib.colorbar:Using auto colorbar locator on colorbar\n",
-      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7f378d4c3ef0>\n",
+      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7fce80705080>\n",
       "DEBUG:matplotlib.colorbar:Setting pcolormesh\n"
      ]
     },
@@ -765,7 +776,7 @@
        "Text(0, 0.5, 'T9')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,13 +811,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd0eae2382d64a75aab7d35a879c8227",
+       "model_id": "8359b51ece264ed4a6cde3a2a80ed73f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -821,9 +832,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7f378d45edd8>\n",
+      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7fce8069b438>\n",
       "DEBUG:matplotlib.colorbar:Using auto colorbar locator on colorbar\n",
-      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7f378d45edd8>\n",
+      "DEBUG:matplotlib.colorbar:locator: <matplotlib.colorbar._ColorbarAutoLocator object at 0x7fce8069b438>\n",
       "DEBUG:matplotlib.colorbar:Setting pcolormesh\n"
      ]
     },
@@ -833,7 +844,7 @@
        "Text(0, 0.5, '|Ut|')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,13 +919,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea547b30eb8d4569bf799741fd32e84d",
+       "model_id": "6d33ff162bfd4c41b9a66bd7ecc1ac7a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -928,10 +939,10 @@
     {
      "data": {
       "text/plain": [
-       "(-2493.489501953125, 2493.489501953125, -2493.489501953125, 2493.489501953125)"
+       "(-2486.97900390625, 2486.979248046875, -2486.97900390625, 2486.979248046875)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,27 +955,6 @@
     "\n",
     "plt.axis('off')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
