Updated data path in the notebook.

--- a/C-ingestion/Mar_Mat_rho_fluct.ipynb
+++ b/C-ingestion/Mar_Mat_rho_fluct.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -19,7 +19,7 @@
      "output_type": "stream",
      "text": [
       "Reading attributes from file  YProfile-01-0090.bobaaa\n",
-      "There are 91 YProfile files in the /data/ASDR/rpod2/PPM/YProfiles/C-ingestion/I11 directory.\n",
+      "There are 91 YProfile files in the /data/ppm_rpod2/YProfiles/C-ingestion/I11 directory.\n",
       "Ndump values range from 1 to 91\n",
       "Time values range from 8.87622 to 807.736\n"
      ]
@@ -34,13 +34,13 @@
     "from ppmpy import ppm\n",
     "\n",
     "run_id = 'I11'\n",
-    "moms = moments.Moments('/user/niagara_scratch_andrassy/{:s}/FVandMoms48/'.format(run_id), use_e3d=False)\n",
-    "yp = ppm.yprofile('/data/ASDR/rpod2/PPM/YProfiles/C-ingestion/{:s}'.format(run_id), filename_offset=-1)"
+    "moms = moments.Moments('/data/ASDR/C-ingestion/{:s}/FVandMoms48/'.format(run_id), use_e3d=False)\n",
+    "yp = ppm.yprofile('/data/ppm_rpod2/YProfiles/C-ingestion/{:s}'.format(run_id), filename_offset=-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -209,7 +209,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d3067dacf9d242da9ad05e0411c75dda",
+       "model_id": "9e825a87142a4708b83f7faeab8db35b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -224,9 +224,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG:matplotlib.axes._base:update_title_pos\n",
-      "DEBUG:matplotlib.font_manager:findfont: Matching :family=sans-serif:style=normal:variant=normal:weight=normal:stretch=normal:size=10.0 to DejaVu Sans ('/usr/local/lib/python3.6/dist-packages/matplotlib/mpl-data/fonts/ttf/DejaVuSans.ttf') with score of 0.050000.\n",
-      "DEBUG:matplotlib.backends.backend_pdf:Assigning font /b'F1' = '/usr/local/lib/python3.6/dist-packages/matplotlib/mpl-data/fonts/ttf/DejaVuSans.ttf'\n",
       "DEBUG:matplotlib.axes._base:update_title_pos\n"
      ]
     },
@@ -243,6 +240,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "DEBUG:matplotlib.font_manager:findfont: Matching :family=sans-serif:style=normal:variant=normal:weight=normal:stretch=normal:size=10.0 to DejaVu Sans ('/usr/local/lib/python3.6/dist-packages/matplotlib/mpl-data/fonts/ttf/DejaVuSans.ttf') with score of 0.050000.\n",
+      "DEBUG:matplotlib.backends.backend_pdf:Assigning font /b'F1' = '/usr/local/lib/python3.6/dist-packages/matplotlib/mpl-data/fonts/ttf/DejaVuSans.ttf'\n",
+      "DEBUG:matplotlib.axes._base:update_title_pos\n",
       "DEBUG:matplotlib.axes._base:update_title_pos\n",
       "DEBUG:matplotlib.backends.backend_pdf:Embedding font /usr/local/lib/python3.6/dist-packages/matplotlib/mpl-data/fonts/ttf/DejaVuSans.ttf.\n",
       "DEBUG:matplotlib.backends.backend_pdf:Writing TrueType font.\n"
